test/arrays/vass/const-checking.fields.good
const-checking.fields.chpl:36: In function 'main':
const-checking.fields.chpl:38: error: illegal lvalue in assignment
const-checking.fields.chpl:40: error: illegal lvalue in assignment
const-checking.fields.chpl:42: error: illegal lvalue in assignment
const-checking.fields.chpl:44: error: illegal lvalue in assignment
const-checking.fields.chpl:47: error: illegal lvalue in assignment
const-checking.fields.chpl:48: error: illegal lvalue in assignment
const-checking.fields.chpl:49: error: illegal lvalue in assignment
const-checking.fields.chpl:51: error: illegal lvalue in assignment
const-checking.fields.chpl:52: error: illegal lvalue in assignment
const-checking.fields.chpl:53: error: illegal lvalue in assignment
